[package]
name = "tetris"
version = "0.0.1"
authors = ["Brendan A R Sechter <b-sechter@unext.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.4.1"
sdl2 = "0.32.2"
sdl2-sys = "0.32.6"

[features]
default = ["sdl2/image"]

